--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+/.idea/
 *.iws
 *.iml
 *.ipr
@@ -36,3 +33,15 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+allure-results/
+
+/allure-report/
+
+/execution-summary/
+
+/test-outputs/
+
+/performanceReport/
+
+src/main/resources/properties/default/
